<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校盟</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- 注册登录 -->
    <string name="login_email">邮箱</string>
    <string name="login_pwd">密码</string>
    <string name="login_pwd_confirm">确认密码</string>
    <string name="login_go">登录</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_register">注册</string>
    <string name="pickName">昵称</string>
    <!-- 侧边栏 -->
    <string name="person_info">个人信息</string>
    <string name="part_info">我的组织</string>
    <string name="unions_info">组织列表</string>
    <string name="my_info">修改我的信息</string>
    <string name="password_change">修改我的密码</string>

</resources>