<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/register_linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/register_email"
            style="@style/input_EmailText" />

        <EditText
            android:id="@+id/register_pickName"
            style="@style/input_EmailText"
            android:hint="@string/pickName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/register_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_+"
                    android:hint="@string/login_pwd"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/register_pwd_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_+"
                    android:hint="@string/login_pwd_confirm"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="25sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/pwd_show"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:onClick="onClick"
                android:src="@drawable/passwor_hidden" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_linear1"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="6dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/register_go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/login_register" />
    </LinearLayout>

</RelativeLayout>